--- a/src/theme-variables.scss
+++ b/src/theme-variables.scss
@@ -1,3 +1,3 @@
-$primary-text-color:#4d26b0;
+$primary-text-color:rgb(202, 202, 202);;
 $primary-pink:rgba(232,61,253,1);
 $background-blue:rgba(83, 42, 191,0.5);
