--- a/src/resultscreen.scss
+++ b/src/resultscreen.scss
@@ -1,6 +1,7 @@
 @import 'layout';
 @import 'theme-variables.scss';
-#result{
-  width:fit-content;
-  background: rgba(83, 42, 191,0.5);
+
+#result {
+  width: fit-content;
+  background: rgba(83, 42, 191, 0.5);
 }
