--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,15 @@
 @import 'theme-variables.scss';
 @import 'layout.scss';
-
+html{
+  display: none;
+  display: block;
+  min-height: 100vh;
+  
+}
 body {
   color: $primary-text-color;
-  height: 100vh;
   background: rgb(232, 61, 253);
-  background: linear-gradient(326deg, rgba(232, 61, 253, 1) 0%, rgba(34, 35, 170, 1) 40%, rgba(18, 5, 105, 1) 87%, rgba(11, 5, 105, 1) 100%);
+  background-image: linear-gradient(326deg, rgba(232, 61, 253, 1) 0%, rgba(34, 35, 170, 1) 40%, rgba(18, 5, 105, 1) 87%, rgba(11, 5, 105, 1) 100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
