--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,8 @@ html{
   display: none;
   display: block;
   min-height: 100vh;
+  font-family: fahkwang;
+  font-variant-caps: petite-caps;
   
 }
 body {
