more usability and responsive design

--- a/src/Game/cardSelection.scss
+++ b/src/Game/cardSelection.scss
@@ -18,4 +18,6 @@
   filter: blur(1px) grayscale(100%);
 }
 
-/*# sourceMappingURL=cardSelection.scss.map */
+.card-submit-btn{
+  margin-top:1rem;
+}
