--- a/src/Game/game.scss
+++ b/src/Game/game.scss
@@ -10,19 +10,17 @@
   text-align: center;
 }
 .question-text{
-transform: translate(-25%,0);
+// transform: translate(-25%,0);
 }
 .slider {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 620px;
 }
 
 .MinMax {
   margin-top: 30px;
-  width: 600px;
   display: flex;
   justify-content: space-between;
   font-size: 20px;
@@ -34,7 +32,6 @@ transform: translate(-25%,0);
 
 .rs-range {
   margin-top: 29px;
-  width: 600px;
   -webkit-appearance: none;
 }
 
@@ -69,29 +66,29 @@ transform: translate(-25%,0);
   margin-top: 5vh;
 }
 
-.rs-label {
-  position: relative;
-  transform-origin: center center;
-  display: block;
-  width: 98px;
-  height: 98px;
-  background: transparent;
-  border-radius: 50%;
-  line-height: 30px;
-  text-align: center;
-  font-weight: bold;
-  padding-top: 22px;
-  box-sizing: border-box;
-  border: 2px solid #fff;
-  margin-top: 20px;
-  margin-left: -38px;
-  left: attr(value);
-  color: #fff;
-  font-style: normal;
-  font-weight: normal;
-  line-height: normal;
-  font-size: 36px;
-}
+// .rs-label {
+//   position: relative;
+//   transform-origin: center center;
+//   display: block;
+//   width: 98px;
+//   height: 98px;
+//   background: transparent;
+//   border-radius: 50%;
+//   line-height: 30px;
+//   text-align: center;
+//   font-weight: bold;
+//   padding-top: 22px;
+//   box-sizing: border-box;
+//   border: 2px solid #fff;
+//   margin-top: 20px;
+//   margin-left: -38px;
+//   left: attr(value);
+//   color: #fff;
+//   font-style: normal;
+//   font-weight: normal;
+//   line-height: normal;
+//   font-size: 36px;
+// }
 
 .fade-enter {
   height: 0;
