--- a/src/selectgame.scss
+++ b/src/selectgame.scss
@@ -7,7 +7,7 @@
   background: $background-blue;
   padding: 10px;
   border-radius: 25px;
-
+  user-select: none;
   .modeItem {
     padding: 4px;
     width: fit-content;
