Edited all texts and added margin tops

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,6 +27,7 @@ color: #FFF;
 }
 .start-poster img{
   border-radius: 8px;
+  margin-top: 15px;
 }
 @media screen and (min-width: 320px) and (max-width: 767px){
   .start-poster img{
